<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.FormularioProdutoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_formulario_descricao_produto"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_produto_descricao_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/spinner_categorias"
        app:layout_constraintEnd_toStartOf="@+id/tv_tipo_unidade"
        app:layout_constraintTop_toBottomOf="@+id/et_formulario_descricao_produto"
        app:layout_constraintBottom_toTopOf="@+id/spinner_categorias"
        android:text="@string/formulario_produto_categoria_hint"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/tv_tipo_unidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_categoria"
        app:layout_constraintEnd_toEndOf="@+id/spinner_tipo_unidades"
        app:layout_constraintTop_toBottomOf="@+id/et_formulario_descricao_produto"
        app:layout_constraintBottom_toTopOf="@+id/spinner_tipo_unidades"
        android:text="@string/formulario_produto_tipo_unidade_hint"
        android:layout_marginTop="16dp"
        />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_categorias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/et_formulario_descricao_produto"
        app:layout_constraintEnd_toStartOf="@+id/spinner_tipo_unidades"
        app:layout_constraintTop_toBottomOf="@+id/tv_categoria"
        android:layout_marginTop="0dp"
        />

    <androidx.appcompat.widget.AppCompatSpinner
       android:id="@+id/spinner_tipo_unidades"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toEndOf="@+id/spinner_categorias"
       app:layout_constraintEnd_toEndOf="@+id/et_formulario_descricao_produto"
       app:layout_constraintTop_toBottomOf="@+id/tv_tipo_unidade"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_categorias"
       android:layout_marginTop="0dp"
       />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_formulario_produto_unidades_minima"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_tipo_unidades">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_produto_unidades_minimas_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_formulario_produto_tempo_duracao"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_formulario_produto_unidades_minima">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_produto_tempo_duracao_hint" />
    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>